<resources>
    <string name="app_name">thirty</string>
    <string name="choice_btn">Combination</string>
    <string name="score">Total Score: </string>
    <string name="_0">0</string>
    <string name="throws_left">Throws left: </string>
    <string name="_3">3</string>
    <string name="start_game">Start game</string>
    <string name="mark_combination">New Combination</string>
    <string name="end_round">End Round</string>
    <string name="throwBtnText">Throw (3)</string>
    <string name="combination_score">"Combinations Score: "</string>
    <string name="left_to_target">Left to target: </string>
    <string name="round">"Round "</string>
    <string name="_1">1</string>
    <string name="total_score">Total Score</string>
    <string name="result">Result</string>
    <string-array name="combinations">
        <item>Low</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>