<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context="view.GameActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/playingField"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/roundNumberText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textSize="20sp"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/score"

                />
            <TextView
                android:id="@+id/scoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="20sp"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>



        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="2"
            android:layout_gravity="center"
            >

            <ImageButton
                android:id="@+id/dice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_row="0"
                android:src="@drawable/white1"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:layout_margin="8dp"
                />
            <ImageButton
                android:id="@+id/dice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_row="0"
                android:src="@drawable/white1"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:layout_margin="8dp"
                />

            <ImageButton
                android:id="@+id/dice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_row="0"
                android:src="@drawable/white1"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:layout_margin="8dp"
                />

            <ImageButton
                android:id="@+id/dice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_row="1"
                android:src="@drawable/white1"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:layout_margin="8dp"
                />

            <ImageButton
                android:id="@+id/dice5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_row="1"
                android:src="@drawable/white1"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:layout_margin="8dp"
                />

            <ImageButton
                android:id="@+id/dice6"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_row="1"
                android:src="@drawable/white1"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:layout_margin="8dp"
                />
        </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <Button
                        android:id="@+id/buttonCombination"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mark_combination" />
                </LinearLayout>
                <ListView
                    android:id="@+id/combinationListView"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/combination_score"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/combinationScoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="20sp"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playingField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Spinner
            android:id="@+id/combinationSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/choice_btn"
            android:textColor="@color/black"
            android:layout_marginStart="10dp" />
        <Button
            android:id="@+id/buttonEndRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_round" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <Button
            android:id="@+id/buttonThrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/throwBtnText"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>